--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.f010c1c5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.31f88cdd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.7bb9b39c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.5043993f.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.70032074.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.47020d8b.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.f6977f99.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.29d15a4d.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.55584a98.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.560b0c8d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.01bdc11b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.b2f3cda8.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1bjdud7 = {
+					__sveltekit_lna926 = {
 						assets: "/ergohack-vii",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -25,8 +25,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.f010c1c5.js"),
-						import("./_app/immutable/entry/app.70032074.js")
+						import("./_app/immutable/entry/start.f6977f99.js"),
+						import("./_app/immutable/entry/app.01bdc11b.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
