--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.75263b8b.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.07dac654.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.29d15a4d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.36be8678.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.0758c1f6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.560b0c8d.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.d26de9d5.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.0f59d12d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.b2f3cda8.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_ki6xhz = {
+					__sveltekit_1gh955c = {
 						assets: "/ergohack-vii",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -25,8 +25,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.75263b8b.js"),
-						import("./_app/immutable/entry/app.d26de9d5.js")
+						import("./_app/immutable/entry/start.07dac654.js"),
+						import("./_app/immutable/entry/app.0f59d12d.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
